# aicomm

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  _typos.toml  ai.rest  cliff.toml  test.rest
.github/workflows/: build.yml
chat/: Cargo.toml
chat/ai_sdk/: Cargo.toml
chat/ai_sdk/examples/: cloudflare.rs
chat/ai_sdk/src/: lib.rs
chat/ai_sdk/src/adapters/: cloudflare.rs  mod.rs  ollama.rs  openai.rs
chat/analytics-server/: Cargo.toml  analytics.yml
chat/analytics-server/examples/: sender.rs
chat/analytics-server/src/: error.rs  event.rs  extractors.rs  handlers.rs  lib.rs  main.rs  openapi.rs
chat/analytics_server/: Cargo.toml
chat/analytics_server/examples/: db.rs
chat/analytics_server/src/: config.rs  extractors.rs  lib.rs
chat/bot-server/: Cargo.toml  bot.yml
chat/bot-server/src/: config.rs  indexer.rs  lib.rs  notify.rs  server.rs
chat/bot_server/: Cargo.toml
chat/bot_server/src/: config.rs  indexer.rs  lib.rs  query.rs
chat/chat-core/: Cargo.toml
chat/chat-core/src/: lib.rs
chat/chat-core/src/utils/: jwt.rs
chat/chat-server/: Cargo.toml  test.http
chat/chat-server/fixtures/: test.sql
chat/chat-server/src/: agent.rs  config.rs  error.rs  lib.rs
chat/chat-server/src/handler/: agent.rs
chat/chat-server/src/middleware/: chat.rs
chat/chat-server/src/model/: agent.rs  chat.rs  messages.rs  user.rs
chat/chat-test/: Cargo.toml
chat/chat-test/tests/: chat.rs
chat/chat_core/: Cargo.toml
chat/chat_core/src/: lib.rs
chat/chat_server/: Cargo.toml
chat/chat_server/src/: error.rs  openapi.rs
chat/chat_server/src/handler/: mod.rs
chat/chat_server/src/model/: agent.rs  messages.rs  mod.rs
chat/chat_test/: Cargo.toml
chat/migrations/: 20250503084450_agent.sql  20250507025509_agent_adapter.sql  20250512015011_user_bot.sql
chat/notify-server/: Cargo.toml
chat/notify-server/src/: lib.rs  notify.rs
chat/notify_server/: Cargo.toml
chat/notify_server/src/: error.rs
chat/simulator/: Cargo.toml
chat/simulator/src/: convert.rs  dummy.rs  lib.rs  main.rs
chatapp/: package.json
chatapp/src/: main.js  utils.js
chatapp/src/components/: MessageSend.vue  Sidebar.vue
chatapp/src/store/: index.js
chatapp/src/views/: Login.vue  Register.vue
e2e/: package-lock.json  package.json
e2e/tests/: chat.spec.ts
fixtures/: analytics.yml  bot.yml
migrations/: 20250503081554_agent.sql
protos/: clickhouse.sql  messages.proto
