[workspace]
members = [ "chat-core","chat-server", "chat-test", "notify-server"]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2", "query", "tracing", "multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
chat-server = { path = "./chat-server" }
chat-core = { path = "./chat-core" }
notify-server = { path = "./notify-server" }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
thiserror = "2.0.12"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower = "0.5.2"
tower-http = { version = "0.5.2", features = [
   "compression-full",
   "cors",
   "fs",
   "trace",
 ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.5", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
uuid = { version = "1.16.0", features = ["v4", "v7"] }
jwt-simple = "0.12.12"
serde_json = "1.0.140"
