[workspace]
members = [ "ai_sdk", "analytics_server", "bot_server", "chat_core","chat_server", "chat_test", "notify_server", "simulator"]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
ai_sdk = { path = "./ai_sdk" }
axum = { version = "0.8.4", features = ["http2", "query", "tracing", "multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
chat_server = { path = "./chat_server" }
chat_core = { path = "./chat_core" }
dashmap = "6.1.0"
enum_dispatch = "0.3.13"
reqwest = { version = "0.12.15", default-features = false, features = [
  "rustls-tls",
  "json",
  "multipart",
  "stream",
] }
notify_server = { path = "./notify_server" }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
thiserror = "2.0.12"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower = "0.5.2"
tower-http = { version = "0.5.2", features = [
   "compression-full",
   "cors",
   "fs",
   "trace",
 ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.5", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
uuid = { version = "1.16.0", features = ["v4", "v7"] }
josekit = "0.10.1"
serde_json = "1.0.140"
