[package]
name = "analytics-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chat-core = { path = "../chat-core" }
chrono = { workspace = true }
http-body-util = { version = "0.1.3", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
sqlx-db-tester = { version = "0.5.0", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true, features = ["v7", "serde"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
clickhouse = { version = "0.13.2", features = ["rustls-tls", "time"] }
prost = "0.13.5"
prost-types = "0.13.5"
futures-util = {version = "0.3.31", default-features = false}
dashmap = { workspace = true }

[dev-dependencies]
clickhouse = { version = "0.13.2", features = ["rustls-tls", "time", "test-util"] }
reqwest = { workspace = true }
