[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]


[dependencies]
ai_sdk = { workspace = true }
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { workspace = true }
chat-core = { path = "../chat-core" }
http-body-util = { version = "0.1.3", optional = true }
hex = "0.4.3"
mime_guess = "2.0.5"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha1 = "0.10.6"
sqlx = { workspace = true }
sqlx-db-tester = { version = "0.5.0", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
josekit = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }

[dev-dependencies]
http-body-util = "0.1.3"
sqlx-db-tester = "0.5.0"
chat-server = { workspace = true, features = ["test-util"] }
wiremock = "0.6.3"
