[package]
name = "chat_core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum= {workspace = true}
axum-extra= {workspace = true}
sqlx ={workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
chrono = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true}
thiserror = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
tower-http = {workspace = true }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
josekit = { workspace = true }
prost = "0.13.5"
prost-types = "0.13.5"

[build-dependencies]
anyhow.workspace = true
prost-build = "0.13.5"
proto-builder-trait = { version = "0.6.2", features = [
    "prost",
], default-features = false }
