[package]
name = "notify_server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chat_core = { path = "../chat_core" }
futures = "0.3.31"
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.17",features = ["sync"] }
tower-http = {workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
josekit = { workspace = true }
