[package]
name = "simulator"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
analytics_server = { path = "../analytics_server" }
chat_core = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clickhouse = { version = "0.13.2", features = ["rustls-tls", "time"] }
dashmap = { workspace = true }
fake = { version = "4.3.0", features = ["chrono", "derive", "uuid"] }
rand = "0.9.1"
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
